backend/flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-service
  namespace: stellar
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: my-flask-app
